[workspace]

members = [
    "app_grid_server",
    "lib_grid_client",
    "lib_grid_client_cpp",
    "lib_grid_client_python",
    "lib_grid_server_interface",
]

[workspace.dependencies]
env_logger = "0.10.0"
log = "0.4.19"
prost = "0.11.6"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
