[workspace]

members = [
    "app_grid_manager",
    "app_grid_config",
    "app_grid_server",
    "app_grid_server_status",
    "app_grid_worker",
    "lib_grid_client",
    "lib_grid_client_cpp",
    "lib_grid_client_python",
    "lib_interface_grid_manager",
    "lib_interface_grid_server",
]

[workspace.dependencies]
chrono = "0.4.31"
env_logger = "0.10.0"
lazy_static = "^1"
log = "0.4.19"
prost = "0.12.1"
serde_json = "1.0"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.0"
