[package]
name = "grid-manager"
version = "0.1.0"
authors = ["Lennart Kudling"]
edition = "2021"

[dependencies]
env_logger = { workspace = true }
grid_manager_interface = { path= "../lib_interface_grid_manager" }
log = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tonic-build = "0.9.2"
