[package]
name = "grid-manager"
version = "0.1.0"
authors = ["Lennart Kudling"]
edition = "2021"

[dependencies]
env_logger = { workspace = true }
grid_manager_interface = { path= "../lib_interface_grid_manager" }
lazy_static = { workspace = true }
log = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
sysinfo = "0.29.10"

[build-dependencies]
tonic-build = "0.9.2"
