[package]
name = "grid-manager"
version = "0.1.0"
authors = ["Lennart Kudling"]
edition = "2021"

[dependencies]
env_logger = { workspace = true }
grid_manager_interface = { path= "../lib_interface_grid_manager" }
lazy_static = { workspace = true }
log = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
sysinfo = "0.29.10"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
]

[build-dependencies]
tonic-build = "0.9.2"
