[package]
name = "grid-server"
version = "0.1.0"
authors = ["Lennart Kudling"]
edition = "2021"

[dependencies]
chrono = { workspace = true }
env_logger = { workspace = true }
grid_server_interface = { path= "../lib_grid_server_interface" }
log = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tonic-build = "0.9.2"
