[package]
name = "grid-server"
version = "0.1.0"
authors = ["Lennart Kudling"]
edition = "2021"

[dependencies]
chrono = { workspace = true }
env_logger = { workspace = true }
grid_server_interface = { path= "../lib_interface_grid_server" }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tonic-build = "0.9.2"
