[package]
name = "grid-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { workspace = true }
grid_client = { path= "../lib_grid_client" }
grid_server_interface = { path= "../lib_interface_grid_server" }
libc = { workspace = true }
libloading = "0.8.0"
log = { workspace = true }
signal-hook = { workspace = true }
tokio = { workspace = true }
