[package]
name = "grid_client"
version = "0.1.0"
authors = ["Lennart Kudling"]
edition = "2021"

[dependencies]
hostname = "0.3.1"
prost = { workspace = true }
grid_server_interface = { path= "../lib_interface_grid_server" }
tonic = { workspace = true }
tokio = { workspace = true }

[target.'cfg(not(target_os="windows"))'.dependencies]
users = "0.11"

[build-dependencies]
tonic-build = "0.9.2"
