[package]
name = "grid-server"
version = "0.1.0"
authors = ["Lennart Kudling"]
edition = "2021"

[dependencies]
server_interface = { path= "../server_interface" }
tonic = "0.8.3"
prost = "0.11.6"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.4"
